--- a/app/src/main/res/layout/subject_item_layout.xml
+++ b/app/src/main/res/layout/subject_item_layout.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
     android:background="@drawable/purple_gradient"
@@ -44,6 +45,7 @@
         android:textAppearance="@style/man_rope"
         android:textColor="#E1ECF1"
         android:textSize="18sp"
+        android:autofillHints=""
         android:hint="@string/subject_name"
         android:textColorHint="#8DA1A8"
         android:enabled="false"
@@ -56,6 +58,7 @@
         android:layout_marginTop="4dp"
         android:layout_alignParentEnd="true"
         android:src="@drawable/trash_bin"
+        android:contentDescription="@string/image_description"
         android:stateListAnimator="@animator/pulse_animation"/>
 
     <ImageView
@@ -63,17 +66,18 @@
         android:layout_width="24dp"
         android:layout_height="24dp"
         android:layout_marginTop="4dp"
-        android:layout_toStartOf="@+id/deleteIV"
         android:layout_marginEnd="10dp"
+        android:layout_toStartOf="@+id/deleteIV"
+        android:contentDescription="@string/image_description"
         android:src="@drawable/edit"
-        android:stateListAnimator="@animator/pulse_animation"/>
+        android:stateListAnimator="@animator/pulse_animation" />
 
     <androidx.cardview.widget.CardView
         android:id="@+id/layout1"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_below="@+id/subjectNameET"
-        android:layout_toLeftOf="@+id/gpaCV"
+        android:layout_toStartOf="@+id/gpaCV"
         android:layout_marginTop="10dp"
         android:orientation="horizontal"
         app:cardBackgroundColor="#445963"
@@ -94,9 +98,9 @@
                     android:id="@+id/totalMarksTV"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="Total\nMarks"
+                    android:text="@string/total_marks"
                     android:textAppearance="@style/rubik"
-                    android:textColor="#B4C6CC"
+                    android:textColor="#CFD8DC"
                     android:textSize="16sp" />
 
                 <EditText
@@ -110,6 +114,7 @@
                     android:textAppearance="@style/default_font"
                     android:textColor="@color/white"
                     android:textSize="16sp"
+                    android:autofillHints=""
                     android:hint="@string/one_to_hundred"
                     android:textColorHint="#8DA1A8"
                     android:enabled="false"
@@ -137,9 +142,9 @@
                     android:id="@+id/marksGainedTV"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="Marks\nGained"
+                    android:text="@string/marks_gained"
                     android:textAppearance="@style/rubik"
-                    android:textColor="#B4C6CC"
+                    android:textColor="#CFD8DC"
                     android:textSize="16sp" />
 
                 <EditText
@@ -153,6 +158,7 @@
                     android:textAppearance="@style/default_font"
                     android:textColor="@color/white"
                     android:textSize="16sp"
+                    android:autofillHints=""
                     android:hint="@string/zero_to_hundred"
                     android:textColorHint="#8DA1A8"
                     android:enabled="false"
@@ -180,9 +186,9 @@
                     android:id="@+id/creditHoursTV"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="Credit\nHours"
+                    android:text="@string/credit_hours"
                     android:textAppearance="@style/rubik"
-                    android:textColor="#B4C6CC"
+                    android:textColor="#CFD8DC"
                     android:textSize="16sp" />
 
                 <EditText
@@ -199,7 +205,9 @@
                     android:hint="@string/one_to_nine"
                     android:textColorHint="#8DA1A8"
                     android:enabled="false"
-                    android:stateListAnimator="@animator/pulse_animation"/>
+                    android:stateListAnimator="@animator/pulse_animation"
+                    android:autofillHints=""
+                    tools:ignore="VisualLintTextFieldSize" />
 
 
             </RelativeLayout>
@@ -234,7 +242,7 @@
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="GPA"
+                android:text="@string/gpa"
                 android:textAppearance="@style/default_font"
                 android:textColor="@color/charcoal"
                 android:textSize="18sp" />
@@ -243,7 +251,7 @@
                 android:id="@+id/gpaTV"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="0,0"
+                android:text="@string/default_gpa"
                 android:textAppearance="@style/rubik"
                 android:textColor="@color/charcoal"
                 android:textSize="18sp" />
@@ -260,7 +268,7 @@
         android:layout_below="@+id/layout1"
         android:layout_marginTop="10dp"
         android:layout_marginHorizontal="40dp"
-        android:text="Save"
+        android:text="@string/save"
         android:textSize="22sp"
         android:textColor="@color/charcoal"
         android:textAppearance="@style/default_font"
