--- a/app/src/main/res/layout/profile_layout.xml
+++ b/app/src/main/res/layout/profile_layout.xml
@@ -8,6 +8,7 @@
         android:id="@+id/profileRV"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_alignParentTop="true"
         android:layout_above="@+id/Navigation">
 
     </androidx.recyclerview.widget.RecyclerView>
