--- a/app/src/main/res/layout/navigation_layout.xml
+++ b/app/src/main/res/layout/navigation_layout.xml
@@ -1,124 +1,49 @@
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:id="@+id/NavigationRL"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
-    android:background="@color/espresso"
     android:layout_alignParentBottom="true"
-    android:padding="10dp">
+    android:layout_marginBottom="20dp"
+    android:layout_marginHorizontal="65dp"
+    app:cardBackgroundColor="@color/espresso"
+    app:cardCornerRadius="30dp"
+    app:cardUseCompatPadding="true">
 
     <RelativeLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignParentStart="true"
-        android:layout_marginStart="12dp"
-        android:onClick="handleBackClick"
-        android:stateListAnimator="@animator/pulse_animation">
+        android:padding="10dp">
 
-        <androidx.cardview.widget.CardView
-            android:id="@+id/backIconIV"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+        <ImageView
+            android:layout_width="48dp"
+            android:layout_height="24dp"
+            android:src="@drawable/back_icon"
+            android:contentDescription="@string/image_description"
+            android:onClick="handleBackClick"
+            android:stateListAnimator="@animator/pulse_animation"/>
+
+
+        <ImageView
+            android:layout_width="48dp"
+            android:layout_height="24dp"
             android:layout_centerHorizontal="true"
-            app:cardBackgroundColor="@color/espresso"
-            app:cardCornerRadius="5dp">
+            android:src="@drawable/home_icon"
+            android:contentDescription="@string/image_description"
+            android:onClick="handleHomeClick"
+            android:stateListAnimator="@animator/pulse_animation"/>
 
-            <ImageView
-                android:layout_width="48dp"
-                android:layout_height="24dp"
-                android:padding="1dp"
-                android:src="@drawable/back_icon"
-                android:contentDescription="@string/image_description" />
 
-        </androidx.cardview.widget.CardView>
-
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_below="@+id/backIconIV"
-            android:layout_marginTop="2dp"
-            android:layout_centerHorizontal="true"
-            android:text="Back"
-            android:textSize="12sp"
-            android:textColor="@color/beige"
-            android:textAppearance="@style/default_font"/>
-
-    </RelativeLayout>
-
-    <RelativeLayout
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_centerHorizontal="true"
-        android:onClick="handleHomeClick"
-        android:stateListAnimator="@animator/pulse_animation">
-
-        <androidx.cardview.widget.CardView
-            android:id="@+id/homeIconIV"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_centerHorizontal="true"
-            app:cardBackgroundColor="@color/espresso"
-            app:cardCornerRadius="5dp">
-
-            <ImageView
-                android:layout_width="48dp"
-                android:layout_height="24dp"
-                android:padding="1dp"
-                android:src="@drawable/home_icon"
-                android:contentDescription="@string/image_description" />
-
-        </androidx.cardview.widget.CardView>
-
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_below="@+id/homeIconIV"
-            android:layout_marginTop="2dp"
-            android:layout_centerHorizontal="true"
-            android:text="Home"
-            android:textSize="12sp"
-            android:textColor="@color/beige"
-            android:textAppearance="@style/default_font"/>
-
-    </RelativeLayout>
-
-    <RelativeLayout
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginEnd="12dp"
-        android:layout_alignParentEnd="true"
-        android:onClick="goToSetting"
-        android:stateListAnimator="@animator/pulse_animation">
-
-        <androidx.cardview.widget.CardView
-            android:id="@+id/settingIconIV"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_centerHorizontal="true"
-            app:cardBackgroundColor="@color/espresso"
-            app:cardCornerRadius="5dp">
-
-            <ImageView
-                android:layout_width="48dp"
-                android:layout_height="24dp"
-                android:padding="1dp"
-                android:src="@drawable/settings_icon"
-                android:contentDescription="@string/image_description" />
-
-        </androidx.cardview.widget.CardView>
-
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_below="@+id/settingIconIV"
-            android:layout_marginTop="2dp"
-            android:layout_centerHorizontal="true"
-            android:text="Settings"
-            android:textSize="12sp"
-            android:textColor="@color/beige"
-            android:textAppearance="@style/default_font"/>
+        <ImageView
+            android:layout_width="48dp"
+            android:layout_height="24dp"
+            android:layout_alignParentEnd="true"
+            android:src="@drawable/settings_icon"
+            android:contentDescription="@string/image_description"
+            android:onClick="handleSettingsClick"
+            android:stateListAnimator="@animator/pulse_animation"/>
 
     </RelativeLayout>
 
 
-</RelativeLayout>
+</androidx.cardview.widget.CardView>
