--- a/app/src/main/res/layout/subject_item_layout.xml
+++ b/app/src/main/res/layout/subject_item_layout.xml
@@ -245,7 +245,7 @@
                 android:textSize="18sp" />
 
             <TextView
-                android:id="@+id/gpaTV"
+                android:id="@+id/subjectGPATV"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="@string/default_gpa"
