--- a/app/src/main/res/layout/semester_item_layout.xml
+++ b/app/src/main/res/layout/semester_item_layout.xml
@@ -55,7 +55,7 @@
                 android:textSize="18sp" />
 
             <TextView
-                android:id="@+id/semesterSgpaTV"
+                android:id="@+id/semesterSGPATV"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="@string/default_gpa"
